objects/CN_Chef_UT_OFF__c.object
<CustomObject>
    <fields>
        <fullName>CN_Chef_UT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Chef UT</label>
        <referenceTo>CN_Chef_UT__c</referenceTo>
        <relationshipLabel>Chef UT OFF</relationshipLabel>
        <relationshipName>Chef_UT_OFF</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Chef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chef</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chef_UT_OFF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Year-Month-Chef</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Not_Include_in_UT_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Include in UT Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Total_OFF_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total OFF Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Total_Working_Days__c</fullName>
        <formula>CN_Chef_UT__r.CN_Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Working Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_YearMonth__c</fullName>
        <formula>CN_Year__c &amp; LPAD( CN_Month__c ,2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YearMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Chef UT OFF</label>
    <nameField>
        <displayFormat>CUO-{000000000}</displayFormat>
        <label>Chef UT OFF No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chef UT OFF</pluralLabel>
    <recordTypes>
        <fullName>CN_Chef_UT_OFF</fullName>
        <active>true</active>
        <label>CN Chef UT OFF</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>